--- a/RecipeApp/RecipeApp/Views/Admin/Edit.cshtml
+++ b/RecipeApp/RecipeApp/Views/Admin/Edit.cshtml
@@ -23,12 +23,22 @@
         <span asp-validation-for="Ingredients"></span>
     </div>
 
-    <div>
+    <div class="form-group">
         <label asp-for="InstructionsHtml"></label>
-        <textarea asp-for="InstructionsHtml"></textarea>
-        <span asp-validation-for="InstructionsHtml"></span>
+        <textarea asp-for="InstructionsHtml" class="form-control" rows="10"></textarea>
+        <span asp-validation-for="InstructionsHtml" class="text-danger"></span>
     </div>
+
 
     <button type="submit">Update</button>
     <a asp-controller="Admin" asp-action="Index">Cancel</a>
 </form>
+
+@section Scripts {
+    <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#InstructionsHtml'))
+            .catch(error => console.error(error));
+    </script>
+}
