--- a/RecipeApp/RecipeApp/Views/Shared/_Layout.cshtml
+++ b/RecipeApp/RecipeApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                         {
+                        <form method="post" asp-controller="Auth" asp-action="Logout">
+                            <button type="submit" class="btn btn-link nav-link" style="border: none; background: none; padding: 0; cursor: pointer;">Logout</button>
+                        </form>
+                         }
                     </ul>
                 </div>
             </div>
